[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "geo-utilities"
version = "0.1.0"
description = "Proste geodezyjne narzędzia wykorzystywane w moich projektach."
authors = [{ name = "Jakub 'PLudrak' Wójcicki" }]
readme = "README.md"
requires-python = ">=3.10"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
